# drf-api

./: README.md  pyproject.toml
drf_api/: db.sqlite3
drf_api/drf_api/: settings.py  urls.py
drf_api/snack/: models.py  serializer.py  urls.py  views.py
drf_api/snack/migrations/: 0001_initial.py
